--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -5914,6 +5914,15 @@
 
 \qpaper{140}{The Ordination of the Twelve}
 
+\qstart{Who was the first of the 12 Apostles ordained for public ministry?}
+{Andrew}{0}
+{Peter}{0}
+{Judas Iscariot}{1}
+{John Zebedee}{0}
+{Nathantiel}{0}
+{Thomas}{0}
+\qstop
+
 \qpaper{141}{Beginning the Public Work}
 
 \qstart{After which event did Jesus say that ``evil spirits shall no more molest men''?}
