--- a/tex/p162.tex
+++ b/tex/p162.tex
@@ -51,7 +51,7 @@
 \vs p162 6:4 And Jesus continued to answer the questions of both the multitude and the Pharisees. Some thought he was a prophet; some believed him to be the Messiah; others said he could not be the Christ, seeing that he came from Galilee, and that the Messiah must restore David’s throne. Still they dared not arrest him.
 \usection{7.\bibnobreakspace The Discourse on Spiritual Freedom}
 \vs p162 7:1 On the afternoon of the last day of the feast and after the apostles had failed in their efforts to persuade him to flee from Jerusalem, Jesus again went into the temple to teach. Finding a large company of believers assembled in Solomon’s Porch, he spoke to them, saying:
-\vs p162 7:2 \pc “If my words abide in you and you are minded to do the will of my Father, then are you truly my disciples. You shall know the truth, and the truth shall make you free. I know how you will answer me: We are the children of Abraham, and we are in bondage to none; how then shall we be made free? Even so, I do not speak of outward subjection to another’s rule; I refer to the liberties of the soul. Verily, verily, I say to you, everyone who commits sin is the bond servant of sin. And you know that the bond servant is not likely to abide forever in the master’s house. You also know that the son does remain in his father’s house. If, therefore, the Son shall make you free, shall make you sons, you shall be free indeed.\fnc{\ldots{}\bibtextul{bondservant}\ldots{} \bibexpl{See note for \bibref[130:6.3]{p0130 6:3}.}}
+\vs p162 7:2 \pc “If my words abide in you and you are minded to do the will of my Father, then are you truly my disciples. You shall know the truth, and the truth shall make you free. I know how you will answer me: We are the children of Abraham, and we are in bondage to none; how then shall we be made free? Even so, I do not speak of outward subjection to another’s rule; I refer to the liberties of the soul. Verily, verily, I say to you, everyone who commits sin is the bond servant of sin. And you know that the bond servant is not likely to abide forever in the master’s house. You also know that the son does remain in his father’s house. If, therefore, the Son shall make you free, shall make you sons, you shall be free indeed.
 \vs p162 7:3 \textcolour{ubdarkred}{“I know that you are Abraham’s seed, yet your leaders seek to kill me because my word has not been allowed to have its transforming influence in their hearts. Their souls are sealed by prejudice and blinded by the pride of revenge. I declare to you the truth which the eternal Father shows me, while these deluded teachers seek to do the things which they have learned only from their temporal fathers. And when you reply that Abraham is your father, then do I tell you that, if you were the children of Abraham, you would do the works of Abraham. Some of you believe my teaching, but others seek to destroy me because I have told you the truth which I received from God. But Abraham did not so treat the truth of God. I perceive that some among you are determined to do the works of the evil one. If God were your Father, you would know me and love the truth which I reveal. Will you not see that I come forth from the Father, that I am sent by God, that I am not doing this work of myself? Why do you not understand my words? Is it because you have chosen to become the children of evil? If you are the children of darkness, you will hardly walk in the light of the truth which I reveal. The children of evil follow only in the ways of their father, who was a deceiver and stood not for the truth because there came to be no truth in him. But now comes the Son of Man speaking and living the truth, and many of you refuse to believe.}
 \vs p162 7:4 \textcolour{ubdarkred}{“Which of you convicts me of sin? If I, then, proclaim and live the truth shown me by the Father, why do you not believe? He who is of God hears gladly the words of God; for this cause many of you hear not my words, because you are not of God. Your teachers have even presumed to say that I do my works by the power of the prince of devils. One near by has just said that I have a devil, that I am a child of the devil. But all of you who deal honestly with your own souls know full well that I am not a devil. You know that I honour the Father even while you would dishonour me. I seek not my own glory, only the glory of my Paradise Father. And I do not judge you, for there is one who judges for me.}
 \vs p162 7:5 \textcolour{ubdarkred}{“Verily, verily, I say to you who believe the gospel that, if a man will keep this word of truth alive in his heart, he shall never taste death. And now just at my side a scribe says this statement proves that I have a devil, seeing that Abraham is dead, also the prophets. And he asks: ‘Are you so much greater than Abraham and the prophets that you dare to stand here and say that whoso keeps your word shall not taste death? Who do you claim to be that you dare to utter such blasphemies?’ And I say to all such that, if I glorify myself, my glory is as nothing. But it is the Father who shall glorify me, even the same Father whom you call God. But you have failed to know this your God and my Father, and I have come to bring you together; to show you how to become truly the sons of God. Though you know not the Father, I truly know him. Even Abraham rejoiced to see my day, and by faith he saw it and was glad.”}
