Add a note about Kislicyn's hypothesis

--- a/tex/p058.tex
+++ b/tex/p058.tex
@@ -29,7 +29,7 @@
 \vs p058 3:5 \pc All of these essential cosmic conditions had to evolve to a favourable status before the Life Carriers could actually begin the establishment of life on Urantia.
 \usection{4.\bibnobreakspace The Life\hyp{}Dawn Era}
 \vs p058 4:1 That we are called Life Carriers should not confuse you. We can and do carry life to the planets, but we brought no life to Urantia. Urantia life is unique, original with the planet. This sphere is a life\hyp{}modification world; all life appearing hereon was formulated by us right here on the planet; and there is no other world in all Satania, even in all Nebadon, that has a life existence just like that of Urantia.
-\vs p058 4:2 \pc \bibemph{550,000,000} years ago the Life Carrier corps returned to Urantia. In co\hyp{}operation with spiritual powers and superphysical forces we organized and initiated the original life patterns of this world and planted them in the hospitable waters of the realm. All planetary life (aside from extraplanetary personalities) down to the days of Caligastia, the Planetary Prince, had its origin in our three original, identical, and simultaneous marine\hyp{}life implantations. These three life implantations have been designated as: the \bibemph{central} or Eurasian\hyp{}African, the \bibemph{eastern} or Australasian, and the \bibemph{western,} embracing Greenland and the Americas.
+\vs p058 4:2 \pc \bibemph{550,000,000} years ago\fnst{\textbf{\bibemph{550,000,000} years ago}, This corresponds to the time when, according to Kislicyn's hypothesis, the geosphere underwent a deformation from the shape of a dodecahedron (the ``ether shape'') into the shape of an icosahedron (the ``water shape'').} the Life Carrier corps returned to Urantia. In co\hyp{}operation with spiritual powers and superphysical forces we organized and initiated the original life patterns of this world and planted them in the hospitable waters of the realm. All planetary life (aside from extraplanetary personalities) down to the days of Caligastia, the Planetary Prince, had its origin in our three original, identical, and simultaneous marine\hyp{}life implantations. These three life implantations have been designated as: the \bibemph{central} or Eurasian\hyp{}African, the \bibemph{eastern} or Australasian, and the \bibemph{western,} embracing Greenland and the Americas.
 \vs p058 4:3 \pc \bibemph{500,000,000} years ago primitive marine vegetable life was well established on Urantia. Greenland and the arctic land mass, together with North and South America, were beginning their long and slow westward drift. Africa moved slightly south, creating an east and west trough, the Mediterranean basin, between itself and the mother body. Antarctica, Australia, and the land indicated by the islands of the Pacific broke away on the south and east and have drifted far away since that day.
 \vs p058 4:4 We had planted the primitive form of marine life in the sheltered tropic bays of the central seas of the east\hyp{}west cleavage of the breaking\hyp{}up continental land mass. Our purpose in making three marine\hyp{}life implantations was to ensure that each great land mass would carry this life with it, in its warm\hyp{}water seas, as the land subsequently separated. We foresaw that in the later era of the emergence of land life large oceans of water would separate these drifting continental land masses.
 \usection{5.\bibnobreakspace The Continental Drift}
