Remove superfluous footnotes.

--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -89,7 +89,7 @@
 \vs p134 8:6 \pc Near the end of the mountain sojourn Jesus asked his Father if he might be permitted to hold conference with his Satania enemies as the Son of Man, as Joshua ben Joseph. This request was granted. During the last week on Mount Hermon the great temptation, the universe trial, occurred. Satan (representing Lucifer) and the rebellious Planetary Prince, Caligastia, were present with Jesus and were made fully visible to him. And this “temptation,” this final trial of human loyalty in the face of the misrepresentations of rebel personalities, had not to do with food, temple pinnacles, or presumptuous acts. It had not to do with the kingdoms of this world but with the sovereignty of a mighty and glorious universe. The symbolism of your records was intended for the backward ages of the world’s childlike thought. And subsequent generations should understand what a great struggle the Son of Man passed through that eventful day on Mount Hermon.
 \vs p134 8:7 To the many proposals and counterproposals of the emissaries of Lucifer, Jesus only made reply: \textcolour{ubdarkred}{“May the will of my Paradise Father prevail, and you, my rebellious son, may the Ancients of Days judge you divinely. I am your Creator\hyp{}father; I can hardly judge you justly, and my mercy you have already spurned. I commit you to the adjudication of the Judges of a greater universe.”}
 \vs p134 8:8 To all the Lucifer\hyp{}suggested compromises and makeshifts, to all such specious proposals about the incarnation bestowal, Jesus only made reply, \textcolour{ubdarkred}{“The will of my Father in Paradise be done.”} And when the trying ordeal was finished, the detached guardian seraphim returned to Jesus’ side and ministered to him.
-\vs p134 8:9 \pc On an afternoon in late summer, amid the trees and in the silence of nature, Michael of Nebadon won the unquestioned sovereignty of his universe. On that day he completed the task set for Creator Sons to live to the full the incarnated life in the likeness of mortal flesh on the evolutionary worlds of time and space. The universe announcement of this momentous achievement was not made until the day of his baptism, months afterwards, but it all really took place that day on the mountain. And when Jesus came down from his sojourn on Mount Hermon, the Lucifer rebellion in Satania and the Caligastia secession on Urantia were virtually settled. Jesus had paid the last price required of him to attain the sovereignty of his universe, which in itself regulates the status of all rebels and determines that all such future upheavals (if they ever occur) may be dealt with summarily and effectively. Accordingly, it may be seen that the so\hyp{}called “great temptation” of Jesus took place sometime before his baptism and not just after that event.\fnc{\ldots{}the so-called “great temptation” of Jesus took place \bibtextul{some time} before his baptism\ldots{} \bibexpl{Closed form “sometime”. See note for \bibref[60:3.20]{p060 3:20}. “Sometime before Michael’s death in the flesh the fallen Lucifer’s associate,\ldots{}”}}
+\vs p134 8:9 \pc On an afternoon in late summer, amid the trees and in the silence of nature, Michael of Nebadon won the unquestioned sovereignty of his universe. On that day he completed the task set for Creator Sons to live to the full the incarnated life in the likeness of mortal flesh on the evolutionary worlds of time and space. The universe announcement of this momentous achievement was not made until the day of his baptism, months afterwards, but it all really took place that day on the mountain. And when Jesus came down from his sojourn on Mount Hermon, the Lucifer rebellion in Satania and the Caligastia secession on Urantia were virtually settled. Jesus had paid the last price required of him to attain the sovereignty of his universe, which in itself regulates the status of all rebels and determines that all such future upheavals (if they ever occur) may be dealt with summarily and effectively. Accordingly, it may be seen that the so\hyp{}called “great temptation” of Jesus took place sometime before his baptism and not just after that event.
 \vs p134 8:10 At the end of this sojourn on the mountain, as Jesus was making his descent, he met Tiglath coming up to the rendezvous with food. Turning him back, he said only: \textcolour{ubdarkred}{“The period of rest is over; I must return to my Father’s business.”} He was a silent and much changed man as they journeyed back to Dan, where he took leave of the lad, giving him the donkey. He then proceeded south by the same way he had come, to Capernaum.
 \usection{9.\bibnobreakspace The Time of Waiting}
 \vs p134 9:1 It was now near the end of the summer, about the time of the day of atonement and the feast of tabernacles. Jesus had a family meeting in Capernaum over the Sabbath and the next day started for Jerusalem with John the son of Zebedee, going to the east of the lake and by Gerasa and on down the Jordan valley. While he visited some with his companion on the way, John noted a great change in Jesus.
