--- a/tex/p180.tex
+++ b/tex/p180.tex
@@ -22,7 +22,7 @@
 \vs p180 3:1 The 11 had scarcely ceased their discussions of the discourse on the vine and the branches when the Master, indicating that he was desirous of speaking to them further and knowing that his time was short, said: “When I have left you, be not discouraged by the enmity of the world. Be not downcast even when fainthearted believers turn against you and join hands with the enemies of the kingdom. If the world shall hate you, you should recall that it hated me even before it hated you. If you were of this world, then would the world love its own, but because you are not, the world refuses to love you. You are in this world, but your lives are not to be worldlike. I have chosen you out of the world to represent the spirit of another world even to this world from which you have been chosen. But always remember the words I have spoken to you: The servant is not greater than his master. If they dare to persecute me, they will also persecute you. If my words offend the unbelievers, so also will your words offend the ungodly. And all of this will they do to you because they believe not in me nor in Him who sent me; so will you suffer many things for the sake of my gospel. But when you endure these tribulations, you should recall that I also suffered before you for the sake of this gospel of the heavenly kingdom.\fnc{Be not downcast even when \bibtextul{faint-hearted} believers turn against you\ldots{} \bibexpl{See note for \bibref[139:12.1]{p0139 12:1}.}}
 \vs p180 3:2 \textcolour{ubdarkred}{“Many of those who will assail you are ignorant of the light of heaven, but this is not true of some who now persecute us. If we had not taught them the truth, they might do many strange things without falling under condemnation, but now, since they have known the light and presumed to reject it, they have no excuse for their attitude. He who hates me hates my Father. It cannot be otherwise; the light which would save you if accepted can only condemn you if it is knowingly rejected. And what have I done to these men that they should hate me with such a terrible hatred? Nothing, save to offer them fellowship on earth and salvation in heaven. But have you not read in the Scripture the saying: ‘And they hated me without a cause’?}
 \vs p180 3:3 \textcolour{ubdarkred}{“But I will not leave you alone in the world. Very soon, after I have gone, I will send you a spirit helper. You shall have with you one who will take my place among you, one who will continue to teach you the way of truth, who will even comfort you.}
-\vs p180 3:4 “Let not your hearts be troubled. You believe in God; continue to believe also in me. Even though I must leave you, I will not be far from you. I have already told you that in my Father’s universe there are many tarrying\hyp{}places. If this were not true, I would not have repeatedly told you about them. I am going to return to these worlds of light, stations in the Father’s heaven to which you shall sometime ascend. From these places I came into this world, and the hour is now at hand when I must return to my Father’s work in the spheres on high.\fnc{\ldots{}stations in the Father’s heaven to which you shall \bibtextul{some time} ascend. \bibexpl{See note for \bibref[60:3.20]{p060 3:20}.}}
+\vs p180 3:4 “Let not your hearts be troubled. You believe in God; continue to believe also in me. Even though I must leave you, I will not be far from you. I have already told you that in my Father’s universe there are many tarrying\hyp{}places. If this were not true, I would not have repeatedly told you about them. I am going to return to these worlds of light, stations in the Father’s heaven to which you shall sometime ascend. From these places I came into this world, and the hour is now at hand when I must return to my Father’s work in the spheres on high.
 \vs p180 3:5 \textcolour{ubdarkred}{“If I thus go before you into the Father’s heavenly kingdom, so will I surely send for you that you may be with me in the places that were prepared for the mortal sons of God before this world was. Even though I must leave you, I will be present with you in spirit, and eventually you shall be with me in person when you have ascended to me in my universe even as I am about to ascend to my Father in his greater universe. And what I have told you is true and everlasting, even though you may not fully comprehend it. I go to the Father, and though you cannot now follow me, you shall certainly follow me in the ages to come.”}
 \vs p180 3:6 When Jesus sat down, Thomas arose and said: “Master, we do not know where you are going; so of course we do not know the way. But we will follow you this very night if you will show us the way.”
 \vs p180 3:7 When Jesus heard Thomas, he answered: \textcolour{ubdarkred}{“Thomas, I am the way, the truth, and the life. No man goes to the Father except through me. All who find the Father, first find me. If you know me, you know the way to the Father. And you do know me, for you have lived with me and you now see me.”}
