--- a/tex/p149.tex
+++ b/tex/p149.tex
@@ -60,7 +60,7 @@
 \vs p149 6:11 \textcolour{ubdarkred}{“You do well to be meek before God and self\hyp{}controlled before men, but let your meekness be of spiritual origin and not the self\hyp{}deceptive display of a self\hyp{}conscious sense of self\hyp{}righteous superiority. The prophet spoke advisedly when he said, ‘Walk humbly with God,’ for, while the Father in heaven is the Infinite and the Eternal, he also dwells ‘with him who is of a contrite mind and a humble spirit.’ My Father disdains pride, loathes hypocrisy, and abhors iniquity. And it was to emphasize the value of sincerity and perfect trust in the loving support and faithful guidance of the heavenly Father that I have so often referred to the little child as illustrative of the attitude of mind and the response of spirit which are so essential to the entrance of mortal man into the spirit realities of the kingdom of heaven.}
 \vs p149 6:12 \textcolour{ubdarkred}{“Well did the Prophet Jeremiah describe many mortals when he said: ‘You are near God in the mouth but far from him in the heart.’ And have you not also read that direful warning of the prophet who said: ‘The priests thereof teach for hire, and the prophets thereof divine for money. At the same time they profess piety and proclaim that the Lord is with them.’ Have you not been well warned against those who ‘speak peace to their neighbours when mischief is in their hearts,’ those who ‘flatter with the lips while the heart is given to double\hyp{}dealing’? Of all the sorrows of a trusting man, none are so terrible as to be ‘wounded in the house of a trusted friend.’”}
 \usection{7.\bibnobreakspace Returning to Bethsaida}
-\vs p149 7:1 Andrew, in consultation with Simon Peter and with the approval of Jesus, had instructed David at Bethsaida to dispatch messengers to the various preaching groups with instructions to terminate the tour and return to Bethsaida sometime on Thursday, December 30. By supper time on that rainy day all of the apostolic party and the teaching evangelists had arrived at the Zebedee home.\fnc{\ldots{}and return to Bethsaida \bibtextul{some time} on Thursday, December 30. \bibexpl{See note for \bibref[60:3.20]{p060 3:2}. “sometime” is correct.}}
+\vs p149 7:1 Andrew, in consultation with Simon Peter and with the approval of Jesus, had instructed David at Bethsaida to dispatch messengers to the various preaching groups with instructions to terminate the tour and return to Bethsaida sometime on Thursday, December 30. By supper time on that rainy day all of the apostolic party and the teaching evangelists had arrived at the Zebedee home.
 \vs p149 7:2 The group remained together over the Sabbath day, being accommodated in the homes of Bethsaida and near\hyp{}by Capernaum, after which the entire party was granted a two weeks’ recess to go home to their families, visit their friends, or go fishing. The two or three days they were together in Bethsaida were, indeed, exhilarating and inspiring; even the older teachers were edified by the young preachers as they narrated their experiences.
 \vs p149 7:3 Of the 117 evangelists who participated in this second preaching tour of Galilee, only about 75 survived the test of actual experience and were on hand to be assigned to service at the end of the two weeks’ recess. Jesus, with Andrew, Peter, James, and John, remained at the Zebedee home and spent much time in conference regarding the welfare and extension of the kingdom.
 \quizlink
