Remove two superfluous footnotes.

--- a/tex/p161.tex
+++ b/tex/p161.tex
@@ -23,7 +23,7 @@
 \vs p161 2:6 \ublistelem{5.}\bibnobreakspace He seems to know the thoughts of men’s minds and to understand the longings of their hearts. And he is always sympathetic with our troubled spirits. He seems to possess all our human emotions, but they are magnificently glorified. He strongly loves goodness and equally hates sin. He possesses a superhuman consciousness of the presence of Deity. He prays like a man but performs like a God. He seems to foreknow things; he even now dares to speak about his death, some mystic reference to his future glorification. While he is kind, he is also brave and courageous. He never falters in doing his duty.
 \vs p161 2:7 \ublistelem{6.}\bibnobreakspace We are constantly impressed by the phenomenon of his superhuman knowledge. Hardly does a day pass but something transpires to disclose that the Master knows what is going on away from his immediate presence. He also seems to know about the thoughts of his associates. He undoubtedly has communion with celestial personalities; he unquestionably lives on a spiritual plane far above the rest of us. Everything seems to be open to his unique understanding. He asks us questions to draw us out, not to gain information.
 \vs p161 2:8 \ublistelem{7.}\bibnobreakspace Recently the Master does not hesitate to assert his superhumanity. From the day of our ordination as apostles right on down to recent times, he has never denied that he came from the Father above. He speaks with the authority of a divine teacher. The Master does not hesitate to refute the religious teachings of today and to declare the new gospel with positive authority. He is assertive, positive, and authoritative. Even John the Baptist, when he heard Jesus speak, declared that he was the Son of God. He seems to be so sufficient within himself. He craves not the support of the multitude; he is indifferent to the opinions of men. He is brave and yet so free from pride.
-\vs p161 2:9 \ublistelem{8.}\bibnobreakspace He constantly talks about God as an ever\hyp{}present associate in all that he does. He goes about doing good, for God seems to be in him. He makes the most astounding assertions about himself and his mission on earth, statements which would be absurd if he were not divine. He once declared, \textcolour{ubdarkred}{“Before Abraham was, I am.”} He has definitely claimed divinity; he professes to be in partnership with God. He well\hyp{}nigh exhausts the possibilities of language in the reiteration of his claims of intimate association with the heavenly Father. He even dares to assert that he and the Father are one. He says that anyone who has seen him has seen the Father. And he says and does all these tremendous things with such childlike naturalness. He alludes to his association with the Father in the same manner that he refers to his association with us. He seems to be so sure about God and speaks of these relations in such a matter\hyp{}of\hyp{}fact way.\fnc{He says that \bibtextul{any one} who has seen him has seen the Father. \bibexpl{See note for \bibref[133:1.5]{p0133 1:5}.}}
+\vs p161 2:9 \ublistelem{8.}\bibnobreakspace He constantly talks about God as an ever\hyp{}present associate in all that he does. He goes about doing good, for God seems to be in him. He makes the most astounding assertions about himself and his mission on earth, statements which would be absurd if he were not divine. He once declared, \textcolour{ubdarkred}{“Before Abraham was, I am.”} He has definitely claimed divinity; he professes to be in partnership with God. He well\hyp{}nigh exhausts the possibilities of language in the reiteration of his claims of intimate association with the heavenly Father. He even dares to assert that he and the Father are one. He says that anyone who has seen him has seen the Father. And he says and does all these tremendous things with such childlike naturalness. He alludes to his association with the Father in the same manner that he refers to his association with us. He seems to be so sure about God and speaks of these relations in such a matter\hyp{}of\hyp{}fact way.
 \vs p161 2:10 \ublistelem{9.}\bibnobreakspace In his prayer life he appears to communicate directly with his Father. We have heard few of his prayers, but these few would indicate that he talks with God, as it were, face to face. He seems to know the future as well as the past. He simply could not be all of this and do all of these extraordinary things unless he were something more than human. We know he is human, we are sure of that, but we are almost equally sure that he is also divine. We believe that he is divine. We are convinced that he is the Son of Man and the Son of God.
 \vs p161 2:11 \pc When Nathaniel and Thomas had concluded their conferences with Rodan, they hurried on toward Jerusalem to join their fellow apostles, arriving on Friday of that week. This had been a great experience in the lives of all three of these believers, and the other apostles learned much from the recounting of these experiences by Nathaniel and Thomas.
 \vs p161 2:12 Rodan made his way back to Alexandria, where he long taught his philosophy in the school of Meganta. He became a mighty man in the later affairs of the kingdom of heaven; he was a faithful believer to the end of his earth days, yielding up his life in Greece with others when the persecutions were at their height.
