--- a/tex/p172.tex
+++ b/tex/p172.tex
@@ -25,7 +25,7 @@
 \vs p172 3:3 Jesus did not decide to make this public entrance into Jerusalem as a last bid for popular favour nor as a final grasp for power. Neither did he do it altogether to satisfy the human longings of his disciples and apostles. Jesus entertained none of the illusions of a fantastic dreamer; he well knew what was to be the outcome of this visit.
 \vs p172 3:4 Having decided upon making a public entrance into Jerusalem, the Master was confronted with the necessity of choosing a proper method of executing such a resolve. Jesus thought over all of the many more or less contradictory so\hyp{}called Messianic prophesies, but there seemed to be only one which was at all appropriate for him to follow. Most of these prophetic utterances depicted a king, the son and successor of David, a bold and aggressive temporal deliverer of all Israel from the yoke of foreign domination. But there was one Scripture that had sometimes been associated with the Messiah by those who held more to the spiritual concept of his mission, which Jesus thought might consistently be taken as a guide for his projected entry into Jerusalem. This Scripture was found in Zechariah, and it said: “Rejoice greatly, O daughter of Zion; shout, O daughter of Jerusalem. Behold, your king comes to you. He is just and he brings salvation. He comes as the lowly one, riding upon an ass, upon a colt, the foal of an ass.”
 \vs p172 3:5 \pc A warrior king always entered a city riding upon a horse; a king on a mission of peace and friendship always entered riding upon an ass. Jesus would not enter Jerusalem as a man on horseback, but he was willing to enter peacefully and with good will as the Son of Man on a donkey.
-\vs p172 3:6 \pc Jesus had long tried by direct teaching to impress upon his apostles and his disciples that his kingdom was not of this world, that it was a purely spiritual matter; but he had not succeeded in this effort. Now, what he had failed to do by plain and personal teaching, he would attempt to accomplish by a symbolic appeal. Accordingly, right after the noon lunch, Jesus called Peter and John, and after directing them to go over to Bethpage, a neighbouring village a little off the main road and a short distance north\hyp{}west of Bethany, he further said: “Go to Bethpage, and when you come to the junction of the roads, you will find the colt of an ass tied there. Loose the colt and bring it back with you. If anyone asks you why you do this, merely say, ‘The Master has need of him.’” And when the two apostles had gone into Bethpage as the Master had directed, they found the colt tied near his mother in the open street and close to a house on the corner. As Peter began to untie the colt, the owner came over and asked why they did this, and when Peter answered him as Jesus had directed, the man said: “If your Master is Jesus from Galilee, let him have the colt.” And so they returned bringing the colt with them.\fnc{If \bibtextul{any one} asks you why you do this, merely say, ‘The master has need of him.’” \bibexpl{See note for \bibref[133:1.5]{p0133 1:5} above. Also here, as this is at EOL, a missing hyphen in the first printing could have given rise to the two-word form.}}
+\vs p172 3:6 \pc Jesus had long tried by direct teaching to impress upon his apostles and his disciples that his kingdom was not of this world, that it was a purely spiritual matter; but he had not succeeded in this effort. Now, what he had failed to do by plain and personal teaching, he would attempt to accomplish by a symbolic appeal. Accordingly, right after the noon lunch, Jesus called Peter and John, and after directing them to go over to Bethpage, a neighbouring village a little off the main road and a short distance north\hyp{}west of Bethany, he further said: “Go to Bethpage, and when you come to the junction of the roads, you will find the colt of an ass tied there. Loose the colt and bring it back with you. If anyone asks you why you do this, merely say, ‘The Master has need of him.’” And when the two apostles had gone into Bethpage as the Master had directed, they found the colt tied near his mother in the open street and close to a house on the corner. As Peter began to untie the colt, the owner came over and asked why they did this, and when Peter answered him as Jesus had directed, the man said: “If your Master is Jesus from Galilee, let him have the colt.” And so they returned bringing the colt with them.
 \vs p172 3:7 By this time several hundred pilgrims had gathered around Jesus and his apostles. Since midforenoon the visitors passing by on their way to the Passover had tarried. Meanwhile, David Zebedee and some of his former messenger associates took it upon themselves to hasten on down to Jerusalem, where they effectively spread the report among the throngs of visiting pilgrims about the temple that Jesus of Nazareth was making a triumphal entry into the city. Accordingly, several thousand of these visitors flocked forth to greet this much\hyp{}talked\hyp{}of prophet and wonder\hyp{}worker, whom some believed to be the Messiah. This multitude, coming out from Jerusalem, met Jesus and the crowd going into the city just after they had passed over the brow of Olivet and had begun the descent into the city.
 \vs p172 3:8 As the procession started out from Bethany, there was great enthusiasm among the festive crowd of disciples, believers, and visiting pilgrims, many hailing from Galilee and Perea. Just before they started, the 12 women of the original women’s corps, accompanied by some of their associates, arrived on the scene and joined this unique procession as it moved on joyously toward the city.
 \vs p172 3:9 Before they started, the Alpheus twins put their cloaks on the donkey and held him while the Master got on. As the procession moved toward the summit of Olivet, the festive crowd threw their garments on the ground and brought branches from the near\hyp{}by trees in order to make a carpet of honour for the donkey bearing the royal Son, the promised Messiah. As the merry crowd moved on toward Jerusalem, they began to sing, or rather to shout in unison, the Psalm, “Hosanna to the son of David; blessed is he who comes in the name of the Lord. Hosanna in the highest. Blessed be the kingdom that comes down from heaven.”
