A better solution to the '10 missing days' problem

--- a/tex/p193.tex
+++ b/tex/p193.tex
@@ -40,7 +40,7 @@
 \vs p193 5:4 The Master went to Edentia by way of Jerusem, where the Most Highs, under the observation of the Paradise Son, released Jesus of Nazareth from the morontia state and, through the spirit channels of ascension, returned him to the status of Paradise sonship and supreme sovereignty on Salvington.
 \vs p193 5:5 It was about 7:45 this morning when the morontia Jesus disappeared from the observation of his 11 apostles to begin the ascent to the right hand of his Father, there to receive formal confirmation of his completed sovereignty of the universe of Nebadon.
 \usection{6.\bibnobreakspace Peter Calls a Meeting}
-\vs p193 6:1 Acting upon the instruction of Peter, John Mark and others went forth to call the leading disciples together at the home of Mary Mark. By 10:30, 120 of the foremost disciples of Jesus living in Jerusalem had forgathered to hear the report of the farewell message of the Master and to learn of his ascension. Among this company was Mary the mother of Jesus. She had returned to Jerusalem with John Zebedee when the apostles came back from their recent sojourn in Galilee. Soon after Pentecost she returned to the home of Salome at Bethsaida. James the brother of Jesus was also present at this meeting, the first conference of the Master’s disciples to be called after the termination of his planetary career.
+\vs p193 6:1 Acting upon the instruction of Peter, John Mark and others went forth to call the leading disciples together at the home of Mary Mark. By 10:30\fnst{\textbf{10:30}, The previous section ends at 7:45, 18\ts{th} May and this section begins 10 days later, at 10:30, 28\ts{th} May. That this is so can be inferred from \bibref[194:1.1]{p194 1:1}, where it is stated that this is the day of Pentecost, which occurs 50 days after the Passover.}, 120 of the foremost disciples of Jesus living in Jerusalem had forgathered to hear the report of the farewell message of the Master and to learn of his ascension. Among this company was Mary the mother of Jesus. She had returned to Jerusalem with John Zebedee when the apostles came back from their recent sojourn in Galilee. Soon after Pentecost she returned to the home of Salome at Bethsaida. James the brother of Jesus was also present at this meeting, the first conference of the Master’s disciples to be called after the termination of his planetary career.
 \vs p193 6:2 Simon Peter took it upon himself to speak for his fellow apostles and made a thrilling report of the last meeting of the 11 with their Master and most touchingly portrayed the Master’s final farewell and his ascension disappearance. It was a meeting the like of which had never before occurred on this world. This part of the meeting lasted not quite one hour. Peter then explained that they had decided to choose a successor to Judas Iscariot, and that a recess would be granted to enable the apostles to decide between the two men who had been suggested for this position, Matthias and Justus.
 \vs p193 6:3 The 11 apostles then went downstairs, where they agreed to cast lots in order to determine which of these men should become an apostle to serve in Judas’s place. The lot fell on Matthias, and he was declared to be the new apostle. He was duly inducted into his office and then appointed treasurer. But Matthias had little part in the subsequent activities of the apostles.
 \vs p193 6:4 \pc Soon after Pentecost the twins returned to their homes in Galilee. Simon Zelotes was in retirement for some time before he went forth preaching the gospel. Thomas worried for a shorter period and then resumed his teaching. Nathaniel differed increasingly with Peter regarding preaching about Jesus in the place of proclaiming the former gospel of the kingdom. This disagreement became so acute by the middle of the following month that Nathaniel withdrew, going to Philadelphia to visit Abner and Lazarus; and after tarrying there for more than a year, he went on into the lands beyond Mesopotamia preaching the gospel as he understood it.
