--- a/tex/p194.tex
+++ b/tex/p194.tex
@@ -8,7 +8,7 @@
 \vs p194 0:6 These believers felt themselves suddenly translated into another world, a new existence of joy, power, and glory. The Master had told them the kingdom would come with power, and some of them thought they were beginning to discern what he meant.
 \vs p194 0:7 And when all of this is taken into consideration, it is not difficult to understand how these men came to preach a \bibemph{new gospel about Jesus} in the place of their former message of the fatherhood of God and the brotherhood of men.
 \usection{1.\bibnobreakspace The Pentecost Sermon}
-\vs p194 1:1 The apostles had been in hiding for 40 days. This day happened to be the Jewish festival of Pentecost\fnst{\textbf{Pentecost}, Because of the commonly held \bibemph{false} assumption that the Ascension and Pentecost happened on the same day (Bible, Tertullian, Eusebius), there is a common misconception that a serious textual corruption is present somewhere between the end of Paper 193 and here. Namely, because Pentecost occurs after 50 days, not 40, the 10 days are \bibemph{apparently} missing. In the year A.D. 30, Passover was on April 8, so Pentecost was May 28. As stated in \bibref[193:5.1]{p193 5:1}, Jesus' final morontia appearance --- his so-called ascension --- was on May 18. Hence, `the forty days of his morontia career on Urantia' (\bibref[193:5.3]{p193 5:3}) were April 9 to May 18, inclusive. These 40 days are not the same 40 days that the apostles are said to have been `in hiding' (\bibref[194:1.1]{p194 1:1}). The latter 40 days were April 18 to May 27, inclusive. After tarrying in Jerusalem for the week subsequent to the resurrection (on April 9), the apostles left for Galilee on Monday, April 17; so, for April 18 through May 27, the apostles were out of the sight of the Jewish leaders; that is, they were `in hiding' (see \bibref[191:6.1]{p191 6:1} and \bibref[192:0.1,3-4]{p192 0:1}).}, and thousands of visitors from all parts of the world were in Jerusalem. Many arrived for this feast, but a majority had tarried in the city since the Passover. Now these frightened apostles emerged from their weeks of seclusion to appear boldly in the temple, where they began to preach the new message of a risen Messiah. And all the disciples were likewise conscious of having received some new spiritual endowment of insight and power.
+\vs p194 1:1 The apostles had been in hiding for 40 days\fnst{\textbf{hiding for 40 days}, They were really hiding for 50 days, but the author here refers to the last 40 days period from 18\ts{th} April to 27\ts{th} May, inclusive. Indeed, after tarrying in Jerusalem for the week subsequent to the resurrection (on 9\ts{th} April), the apostles left for Galilee on Monday, 17\ts{th} April; so, for 18\ts{th} April through 27\ts{th} May, the apostles were out of the sight of the Jewish leaders; that is, they were `in hiding' (see \bibref[191:6.1]{p191 6:1} and \bibref[192:0.1,3-4]{p192 0:1}.}. This day happened to be the Jewish festival of Pentecost, and thousands of visitors from all parts of the world were in Jerusalem. Many arrived for this feast, but a majority had tarried in the city since the Passover. Now these frightened apostles emerged from their weeks of seclusion to appear boldly in the temple, where they began to preach the new message of a risen Messiah. And all the disciples were likewise conscious of having received some new spiritual endowment of insight and power.
 \vs p194 1:2 It was about 14:00 when Peter stood up in that very place where his Master had last taught in this temple, and delivered that impassioned appeal which resulted in the winning of more than 2,000 souls. The Master had gone, but they suddenly discovered that this story about him had great power with the people. No wonder they were led on into the further proclamation of that which vindicated their former devotion to Jesus and at the same time so constrained men to believe in him. Six of the apostles participated in this meeting: Peter, Andrew, James, John, Philip, and Matthew. They talked for more than an hour and a half and delivered messages in Greek, Hebrew, and Aramaic, as well as a few words in even other tongues with which they had a speaking acquaintance.
 \vs p194 1:3 The leaders of the Jews were astounded at the boldness of the apostles, but they feared to molest them because of the large numbers who believed their story.
 \vs p194 1:4 By 16:30 more than 2,000 new believers followed the apostles down to the pool of Siloam, where Peter, Andrew, James, and John baptized them in the Master’s name. And it was dark when they had finished with baptizing this multitude.
