Explain how to attain God-consciousness

--- a/tex/p196.tex
+++ b/tex/p196.tex
@@ -74,6 +74,6 @@
 \vs p196 3:31 \pc In the realm of religious experience, spiritual possibility is potential reality. Man’s forward spiritual urge is not a psychic illusion. All of man’s universe romancing may not be fact, but much, very much, is truth.
 \vs p196 3:32 Some men’s lives are too great and noble to descend to the low level of being merely successful. The animal must adapt itself to the environment, but the religious man transcends his environment and in this way escapes the limitations of the present material world through this insight of divine love. This concept of love generates in the soul of man that superanimal effort to find truth, beauty, and goodness; and when he does find them, he is glorified in their embrace; he is consumed with the desire to live them, to do righteousness.
 \vs p196 3:33 Be not discouraged; human evolution is still in progress, and the revelation of God to the world, in and through Jesus, shall not fail.
-\vs p196 3:34 The great challenge to modern man is to achieve better communication with the divine Monitor that dwells within the human mind. Man’s greatest adventure in the flesh consists in the well\hyp{}balanced and sane effort to advance the borders of self\hyp{}consciousness out through the dim realms of embryonic soul\hyp{}consciousness in a wholehearted effort to reach the borderland of spirit\hyp{}consciousness --- contact with the divine presence. Such an experience constitutes God\hyp{}consciousness, an experience mightily confirmative of the pre\hyp{}existent truth of the religious experience of knowing God. Such spirit\hyp{}consciousness is the equivalent of the knowledge of the actuality of sonship with God. Otherwise, the assurance of sonship is the experience of faith.
+\vs p196 3:34 The great challenge\fnst{\textbf{The great challenge}, Careful perusal of the books written by Dr~William~S. Sadler, especially his ``The Physiology of Faith and Fear'' (1912), will help the reader attain the experience described in this paragraph. I made this book available in the Books section of \textbf{urantiaexplorer.org} website.} to modern man is to achieve better communication with the divine Monitor that dwells within the human mind. Man’s greatest adventure in the flesh consists in the well\hyp{}balanced and sane effort to advance the borders of self\hyp{}consciousness out through the dim realms of embryonic soul\hyp{}consciousness in a wholehearted effort to reach the borderland of spirit\hyp{}consciousness --- contact with the divine presence. Such an experience constitutes God\hyp{}consciousness, an experience mightily confirmative of the pre\hyp{}existent truth of the religious experience of knowing God. Such spirit\hyp{}consciousness is the equivalent of the knowledge of the actuality of sonship with God. Otherwise, the assurance of sonship is the experience of faith.
 \vs p196 3:35 And God\hyp{}consciousness is equivalent to the integration of the self with the universe, and on its highest levels of spiritual reality. Only the spirit content of any value is imperishable. Even that which is true, beautiful, and good may not perish in human experience. If man does not choose to survive, then does the surviving Adjuster conserve those realities born of love and nurtured in service. And all these things are a part of the Universal Father. The Father is living love, and this life of the Father is in his Sons. And the spirit of the Father is in his Son’s sons --- mortal men. When all is said and done, the Father idea is still the highest human concept of God.
 \quizlink
