Add a few questions to Paper 10

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -641,6 +641,34 @@
 
 \qpaper{10}{The Paradise Trinity}
 
+\qstart{What does facilitate the Father's escape from personality absolutism?}
+{The Isle of Paradise}{0}
+{The Paradise Trinity}{1}
+{The Eternal Son}{0}
+{The Infinite Spirit}{0}
+\qstop
+
+\qstart{Is the Paradise Trinity inevitable?}
+{Yes}{1}
+{No}{0}
+\qstop
+
+\qstart{Does the Supreme Being exhaust the totality of Trinity's attitude towards the finite?}
+{Yes}{0}
+{No}{1}
+\qstop
+
+\qstart{Does the Ultimate exhaust the totality of Trinity's attitude towards the absonite?}
+{Yes}{0}
+{No}{1}
+\qstop
+
+\qstart{Will the finaliters ever attain the Deity Absolute?}
+{Yes}{0}
+{No}{0}
+{Maybe}{1}
+\qstop
+
 \qpaper{11}{The Eternal Isle of Paradise}
 
 \qstart{How many outer space levels are there?}
