--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -98,16 +98,16 @@
 \usection{7.\bibnobreakspace The Architectural Spheres}
 \vs p015 7:1 While each superuniverse government presides near the centre of the evolutionary universes of its space segment, it occupies a world made to order and is peopled by accredited personalities. These headquarters worlds are architectural spheres, space bodies specifically constructed for their special purpose. While sharing the light of near\hyp{}by suns, these spheres are independently lighted and heated. Each has a sun which gives forth light without heat, like the satellites of Paradise, while each is supplied with heat by the circulation of certain energy currents near the surface of the sphere. These headquarters worlds belong to one of the greater systems situated near the astronomical centre of their respective superuniverses.
 \vs p015 7:2 \pc Time is standardized on the headquarters of the superuniverses. The standard day of the superuniverse of Orvonton is equal to almost 30 days of Urantia time, and the Orvonton year equals 100 standard days. This Uversa year is standard in the 7\ts{th} superuniverse, and it is 22 minutes short of 3,000 days of Urantia time, about 8.2 of your years.
-\vs p015 7:3 \pc The headquarters worlds of the seven superuniverses partake of the nature and grandeur of Paradise, their central pattern of perfection. In reality, all headquarters worlds are paradisiacal. They are indeed heavenly abodes, and they increase in material size, morontia beauty, and spirit glory from Jerusem to the central Isle. And all the satellites of these headquarters worlds are also architectural spheres.
+\vs p015 7:3 \pc The headquarters worlds of the 7 superuniverses partake of the nature and grandeur of Paradise, their central pattern of perfection. In reality, all headquarters worlds are paradisiacal. They are indeed heavenly abodes, and they increase in material size, morontia beauty, and spirit glory from Jerusem to the central Isle. And all the satellites of these headquarters worlds are also architectural spheres.
 \vs p015 7:4 The various headquarters worlds are provided with every phase of material and spiritual creation. All kinds of material, morontial, and spiritual beings are at home on these rendezvous worlds of the universes. As mortal creatures ascend the universe, passing from the material to the spiritual realms, they never lose their appreciation for, and enjoyment of, their former levels of existence.
-\vs p015 7:5 \pc \bibemph{Jerusem,} the headquarters of your local system of Satania, has its seven worlds of transition culture, each of which is encircled by seven satellites, among which are the seven mansion worlds of morontia detention, man’s first postmortal residence. As the term heaven has been used on Urantia, it has sometimes meant these seven mansion worlds, the first mansion world being denominated the first heaven, and so on to the seventh.
+\vs p015 7:5 \pc \bibemph{Jerusem,} the headquarters of your local system of Satania, has its 7 worlds of transition culture, each of which is encircled by 7 satellites, among which are the 7 mansion worlds of morontia detention, man’s first postmortal residence. As the term heaven has been used on Urantia, it has sometimes meant these 7 mansion worlds, the first mansion world being denominated the 1\ts{st} heaven, and so on to the 7\ts{th}.
 \vs p015 7:6 \pc \bibemph{Edentia,} the headquarters of your constellation of Norlatiadek, has its 70 satellites of socializing culture and training, on which ascenders sojourn upon the completion of the Jerusem regime of personality mobilization, unification, and realization.
 \vs p015 7:7 \pc \bibemph{Salvington,} the capital of Nebadon, your local universe, is surrounded by 10 university clusters of 49 spheres each. Hereon is man spiritualized following his constellation socialization.
-\vs p015 7:8 \pc \bibemph{Uminor the third,} the headquarters of your minor sector, Ensa, is surrounded by the seven spheres of the higher physical studies of the ascendant life.
+\vs p015 7:8 \pc \bibemph{Uminor the third,} the headquarters of your minor sector, Ensa, is surrounded by the 7 spheres of the higher physical studies of the ascendant life.
 \vs p015 7:9 \pc \bibemph{Umajor the fifth,} the headquarters of your major sector, Splandon, is surrounded by the 70 spheres of the advancing intellectual training of the superuniverse.
 \vs p015 7:10 \pc \bibemph{Uversa,} the headquarters of Orvonton, your superuniverse, is immediately surrounded by the 7 higher universities of advanced spiritual training for ascending will creatures. Each of these 7 clusters of wonder spheres consists of 70 specialized worlds containing thousands upon thousands of replete institutions and organizations devoted to universe training and spirit culture wherein the pilgrims of time are re\hyp{}educated and re\hyp{}examined preparatory to their long flight to Havona. The arriving pilgrims of time are always received on these associated worlds, but the departing graduates are always dispatched for Havona direct from the shores of Uversa.
 \vs p015 7:11 Uversa is the spiritual and administrative headquarters for approximately one trillion inhabited or inhabitable worlds. The glory, grandeur, and perfection of the Orvonton capital surpass any of the wonders of the time\hyp{}space creations.
-\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{\textbf{500 billion}, The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the seven superuniverses.
+\vs p015 7:12 \pc If all the projected local universes and their component parts were established, there would be slightly less than 500 billion\fnst{\textbf{500 billion}, The exact number is: $7\times(1 + 7\times 70 + 10\times(70+1) + 1000\times(7+1) + 100000\times 647591) = 453,313,764,407$.} architectural worlds in the 7 superuniverses.
 \usection{8.\bibnobreakspace Energy Control and Regulation}
 \vs p015 8:1 The headquarters spheres of the superuniverses are so constructed that they are able to function as efficient power\hyp{}energy regulators for their various sectors, serving as focal points for the directionization of energy to their component local universes. They exert a powerful influence over the balance and control of the physical energies circulating through organized space.
 \vs p015 8:2 Further regulative functions are performed by the superuniverse power centres and physical controllers, living and semiliving intelligent entities constituted for this express purpose. These power centres and controllers are difficult of understanding; the lower orders are not volitional, they do not possess will, they do not choose, their functions are very intelligent but apparently automatic and inherent in their highly specialized organization. The power centres and physical controllers of the superuniverses assume direction and partial control of the 30 energy systems which comprise the gravita domain. The physical\hyp{}energy circuits administered by the power centres of Uversa require a little over 968,000,000 years to complete the encirclement of the superuniverse.
