Use words instead of digits when more appropriate

--- a/tex/p089.tex
+++ b/tex/p089.tex
@@ -11,7 +11,7 @@
 \vs p089 1:6 Methods of eating soon became taboo, and so originated ancient and modern table etiquette. Caste systems and social levels are vestigial remnants of olden prohibitions. The taboos were highly effective in organizing society, but they were terribly burdensome; the negative\hyp{}ban system not only maintained useful and constructive regulations but also obsolete, outworn, and useless taboos.
 \vs p089 1:7 There would, however, be no civilized society to sit in criticism upon primitive man except for these far\hyp{}flung and multifarious taboos, and the taboo would never have endured but for the upholding sanctions of primitive religion. Many of the essential factors in man’s evolution have been highly expensive, have cost vast treasure in effort, sacrifice, and self\hyp{}denial, but these achievements of self\hyp{}control were the real rungs on which man climbed civilization’s ascending ladder.
 \usection{2.\bibnobreakspace The Concept of Sin}
-\vs p089 2:1 The fear of chance and the dread of bad luck literally drove man into the invention of primitive religion as supposed insurance against these calamities. From magic and ghosts, religion evolved through spirits and fetishes to taboos. Every primitive tribe had its tree of forbidden fruit, literally the apple but figuratively consisting of 1,000 branches hanging heavy with all sorts of taboos. And the forbidden tree always said, “Thou shalt not.”
+\vs p089 2:1 The fear of chance and the dread of bad luck literally drove man into the invention of primitive religion as supposed insurance against these calamities. From magic and ghosts, religion evolved through spirits and fetishes to taboos. Every primitive tribe had its tree of forbidden fruit, literally the apple but figuratively consisting of a thousand branches hanging heavy with all sorts of taboos. And the forbidden tree always said, “Thou shalt not.”
 \vs p089 2:2 As the savage mind evolved to that point where it envisaged both good and bad spirits, and when the taboo received the solemn sanction of evolving religion, the stage was all set for the appearance of the new conception of \bibemph{sin.} The idea of sin was universally established in the world before revealed religion ever made its entry. It was only by the concept of sin that natural death became logical to the primitive mind. Sin was the transgression of taboo, and death was the penalty of sin.
 \vs p089 2:3 Sin was ritual, not rational; an act, not a thought. And this entire concept of sin was fostered by the lingering traditions of Dilmun and the days of a little paradise on earth. The tradition of Adam and the Garden of Eden also lent substance to the dream of a onetime “golden age” of the dawn of the races. And all this confirmed the ideas later expressed in the belief that man had his origin in a special creation, that he started his career in perfection, and that transgression of the taboos --- sin --- brought him down to his later sorry plight.
 \vs p089 2:4 The habitual violation of a taboo became a vice; primitive law made vice a crime; religion made it a sin. Among the early tribes the violation of a taboo was a combined crime and sin. Community calamity was always regarded as punishment for tribal sin. To those who believed that prosperity and righteousness went together, the apparent prosperity of the wicked occasioned so much worry that it was necessary to invent hells for the punishment of taboo violators; the numbers of these places of future punishment have varied from one to five.
