--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -7,8 +7,8 @@
 \vs p000 0:5 \pc Your world, Urantia, is one of many similar inhabited planets which comprise the local universe of \bibemph{Nebadon}\fnst{\textbf{\bibemph{Nebadon}}, is a coined word from the Old English \textit{adune} (> \textit{dune} > \textit{dun} > \textit{don}) ``off the hill'', resulting in the probable total meaning of ``the nebular hill''. Indeed, the Nebadon (local universe) level of our ascension is a relative `hill', compared to the system-level mansion world experience.}. This universe, together with similar creations, makes up the superuniverse of \bibemph{Orvonton,} from whose capital, Uversa\fnst{\textbf{Uversa}, is a coined word from the Latin \textit{versatilis} ``capable of turning or being turned around'', signifying the centre of the superuniverse expressing the 7\ts{th} expression of the Father-Son-Spirit pattern: `U' being the 21\ts{st} letter of English alphabet: $21=3\times 7$. The name of the capital of the first evolutionary superuniverse, under this scheme, would be ``Cversa'', of the second --- ``Fversa'', and so on.}, our commission hails. Orvonton is one of the seven evolutionary superuniverses of time and space which circle the never\hyp{}beginning, never\hyp{}ending creation of divine perfection --- the central universe of \bibemph{Havona.} At the heart of this eternal and central universe is the stationary Isle of Paradise, the geographic centre of infinity and the dwelling place of the eternal God.
 \vs p000 0:6 The seven evolving superuniverses in association with the central and divine universe, we commonly refer to as the \bibemph{grand universe;} these are the now organized and inhabited creations. They are all a part of the \bibemph{master universe,} which also embraces the uninhabited but mobilizing universes of outer space.
 \usection{1.\bibnobreakspace Deity and Divinity}
-\vs p000 1:1 The universe of universes presents phenomena of deity activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
-\vs p000 1:2 \pc DEITY is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
+\vs p000 1:1 The universe of universes presents phenomena of deity\fnst{\textbf{deity}, In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
+\vs p000 1:2 \pc DEITY\fnst{\textbf{DEITY}, All in capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
 \vs p000 1:3 \pc Deity functions on personal, prepersonal, and superpersonal levels. Total Deity is functional on the following seven levels:
 \vs p000 1:4 \ublistelem{1.}\bibnobreakspace \bibemph{Static ---} self\hyp{}contained and self\hyp{}existent Deity.
 \vs p000 1:5 \ublistelem{2.}\bibnobreakspace \bibemph{Potential ---} self\hyp{}willed and self\hyp{}purposive Deity.
