--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -8,7 +8,7 @@
 \vs p000 0:6 The seven evolving superuniverses in association with the central and divine universe, we commonly refer to as the \bibemph{grand universe;} these are the now organized and inhabited creations. They are all a part of the \bibemph{master universe,} which also embraces the uninhabited but mobilizing universes of outer space.
 \usection{1.\bibnobreakspace Deity and Divinity}
 \vs p000 1:1 The universe of universes presents phenomena of deity\fnst{\textbf{deity}, In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
-\vs p000 1:2 \pc DEITY\fnst{\textbf{DEITY}, All in capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
+\vs p000 1:2 \pc DEITY\fnst{\textbf{DEITY}, All in capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
 \vs p000 1:3 \pc Deity functions on personal, prepersonal, and superpersonal levels. Total Deity is functional on the following seven levels:
 \vs p000 1:4 \ublistelem{1.}\bibnobreakspace \bibemph{Static ---} self\hyp{}contained and self\hyp{}existent Deity.
 \vs p000 1:5 \ublistelem{2.}\bibnobreakspace \bibemph{Potential ---} self\hyp{}willed and self\hyp{}purposive Deity.
